tests/purs/failing/InvalidDerivedInstance2.purs
-- @shouldFailWith InvalidInstanceHead
module Main where

import Prelude

derive instance eqRecord :: Eq {}
